ingress-argo-workglows.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo
  annotations:
    external-dns.alpha.kubernetes.io/alias: "true"
    external-dns.alpha.kubernetes.io/target: target.example.com
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: argo-workflows.dev-ops-experiments.eu-west-2.fdp-infra.fredhopper.com
    http:
      paths:
      - backend:
          serviceName: argo-workflows-1641740018-server
          servicePort: 2746
        path: /argo/(.*)
      - backend:
          serviceName: argo-workflows-1641740018-server
          servicePort: 2746
        path: /argo
