ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: argo-cd.dev-ops-experiments.eu-west-2.fdp-infra.fredhopper.com
      http:
        paths:
          - backend:
              serviceName: argo-cd-argocd-server
              servicePort: 80
